All: Added top_nav class to fix nav spacing.

--- a/css/custom.css
+++ b/css/custom.css
@@ -847,7 +847,7 @@ there.
     padding: 10px;
   }
 
-  .navigation{
+  .top_nav{
     margin-right: -7.5%;
   }
 }
